# clstyle

./: README.rst  pyproject.toml  tox.ini
clstyle/: __init__.py  checker.py  cli.py  helpers.py  models.py  parser.py  utils.py
tests/: test_evaluate_repo.py  test_list_modules.py  test_list_variable.py
tests/test_repo/simple-repo/src/: main.py
tests/test_repo/simple-repo/src/calc/: add.py  prod.py
